<resources>
    <string name="app_name">BookStoreInventory</string>
    <string name="action_settings">Settings</string>

    <string name="total_books">The Books Table contains</string>
    <string name="books">Books</string>

    <string name="dummy_data">Dummy Data</string>
    <string name="delete_all">Delete All Data</string>


    <!-- test Strings - >

    <!- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>
    <!--Resupply button textView-->
    <string name="Resupply">Resupply</string>


    <!-- Hints editor page -->
    <string name="hint_pet_name">Book Name</string>
    <string name="hint_author">Author</string>
    <string name="hint_category">Category</string>
    <string name="hint_Price">Price</string>
    <string name="hint_supplier">Supplier</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_quantity">Quantity</string>

    <!-- Editor page Failed/Successful -->
    <string name="editor_insert_book_failed">Error with saving Book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating Book</string>
    <string name="editor_insert_Book_successful">Book saved</string>
    <string name="editor_insert_Book_failed">Error with saving Book</string>

    <!-- Empty Check Toasts Strings -->
    <string name="no_name">Book Name is Missing</string>
    <string name="no_author">Author is Missing</string>
    <string name="no_category">Category is Missing</string>
    <string name="no_price">Price is Missing</string>
    <string name="no_supply_name">Supplier is Missing</string>
    <string name="no_supply_phone">Phone number is Missing</string>
    <string name="no_quantity">Quantity is Missing</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit empty here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Pet deleted</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Pet deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting pet</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
</resources>
